# kurs_5_bd

./: pyproject.toml
src/: client_api.py  db_manager.py  main.py
