[tool.poetry]
name = "kurs-5-bd"
version = "0.1.0"
description = ""
authors = ["Aleksandr Podcherednik <startcpa1@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
